[tool.poetry]
name = "rag101"
version = "0.1.0"
description = ""
authors = ["Shanmukha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.2"
langchain-openai = "^0.2.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
langchain-community = "^0.3.2"
youtube-transcript-api = "^0.6.2"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
